Bug 15660 - The images don't build after the git security release and CentOS 8 Stream is EOL
Summary: The images don't build after the git security release and CentOS 8 Stream is EOL
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: Build (show other bugs)
Version: 4.20.1
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Andreas Schneider
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-06-10 13:43 UTC by Andreas Schneider
Modified: 2026-03-31 03:23 UTC (History)
2 users (show)

See Also:


Attachments
patch for 4.20 (17.74 KB, patch)
2024-06-13 09:12 UTC, Andreas Schneider
metze: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Schneider 2024-06-10 13:43:27 UTC
The images don't build after the git security release and CentOS 8 Stream is EOL
Comment 1 Samba QA Contact 2024-06-13 08:42:04 UTC
This bug was referenced in samba master:

84fb5cc8451c0af354850f39ae6debf388849ebb
d00e9482a50b5a756f4847cde977c40c80e179c5
f3af6e860800d0f837cdf6c2d16d1cd12feb08df
54fed589cca245c716492bcc78b574c30378b19c
f88e60644e76c6310088934439f9c0da0f63905f
8ae180e1678fc8565b8074d4886f7d3676a0f950
Comment 2 Andreas Schneider 2024-06-13 09:12:09 UTC
Created attachment 18338 [details]
patch for 4.20
Comment 3 Stefan Metzmacher 2024-06-13 10:08:19 UTC
I've added cherry pick information and will push it once this pipeline is all green:
https://gitlab.com/samba-team/devel/samba/-/pipelines/1330837589

I've also a 4.19 pipeline here:
https://gitlab.com/samba-team/devel/samba/-/pipelines/1330838684

A 4.18 pipeline is running here:
https://gitlab.com/samba-team/devel/samba/-/pipelines/1330856507
Comment 4 Stefan Metzmacher 2024-06-13 10:22:27 UTC
New 4.18 pipeline:
https://gitlab.com/samba-team/devel/samba/-/pipelines/1330874657
Comment 5 Andreas Schneider 2024-06-14 09:22:21 UTC
4.20 looks fine.

4.19 detects a newly generated signature file.
Comment 6 Samba QA Contact 2024-06-14 12:18:03 UTC
This bug was referenced in samba v4-20-test:

e8dc4bb0edfcb7b6622bf236aafe2a8e05290ee9
7edef3c7fb136e7bb6dbd4d4e47a4d4add0d0dfd
95c596551411eacd7de8057a62b61b7d17e97467
e5293b114b15d1b20a665eca610c357bd08f21e7
87ac580b40f3205576f06233cedb967b53a63638
8b8fef4c9c8d517e40cb860eebb32f8781c43358
Comment 7 Samba QA Contact 2024-06-19 14:35:15 UTC
This bug was referenced in samba v4-20-stable (Release samba-4.20.2):

e8dc4bb0edfcb7b6622bf236aafe2a8e05290ee9
7edef3c7fb136e7bb6dbd4d4e47a4d4add0d0dfd
95c596551411eacd7de8057a62b61b7d17e97467
e5293b114b15d1b20a665eca610c357bd08f21e7
87ac580b40f3205576f06233cedb967b53a63638
8b8fef4c9c8d517e40cb860eebb32f8781c43358
Comment 8 Stefan Metzmacher 2024-07-05 10:24:24 UTC
4.19 patches will follow...
Comment 9 Samba QA Contact 2024-07-09 14:25:04 UTC
This bug was referenced in samba v4-19-test:

0702547d3034e22f3505948f8b45a09d0ae1e082
179168442a4690090e8de87907337eb371a345be
8d2c64624426ba5e1bcfb97067a43596cae334ce
374c5ed2f5139da2feb0b38c2c94795f147dbdb6
4180ff4e97b6280adf2082c0eaf4df7205ca6464
9308c3aad449ff25c80f354554443b80b035f579
fee232dd9cf80c74edb57e5e65e6cb3a39d9e574
Comment 10 Samba QA Contact 2024-07-10 10:35:04 UTC
This bug was referenced in samba master:

3a21b7d9a4e7e9814d0be8c0ebf72b9821a5dc36
Comment 11 Samba QA Contact 2024-07-11 11:46:04 UTC
This bug was referenced in samba v4-20-test:

f5920ceea328ddf7048b92d71a71adf2c0056670
Comment 12 Samba QA Contact 2024-07-11 13:23:03 UTC
This bug was referenced in samba v4-19-test:

63c8ed2a38699e9f3e6f10dc2ba4e6c2904af5a1
Comment 13 Samba QA Contact 2024-08-02 12:14:22 UTC
This bug was referenced in samba v4-20-stable (Release samba-4.20.3):

f5920ceea328ddf7048b92d71a71adf2c0056670
Comment 14 Samba QA Contact 2024-08-15 12:14:31 UTC
This bug was referenced in samba v4-19-stable (Release samba-4.19.8):

0702547d3034e22f3505948f8b45a09d0ae1e082
179168442a4690090e8de87907337eb371a345be
8d2c64624426ba5e1bcfb97067a43596cae334ce
374c5ed2f5139da2feb0b38c2c94795f147dbdb6
4180ff4e97b6280adf2082c0eaf4df7205ca6464
9308c3aad449ff25c80f354554443b80b035f579
fee232dd9cf80c74edb57e5e65e6cb3a39d9e574
63c8ed2a38699e9f3e6f10dc2ba4e6c2904af5a1
Comment 15 Jennifer Sutton 2026-03-31 03:23:34 UTC
Closing as fixed.